--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	#center{margin:0 auto;width:306px;cursor:pointer;}
 	</style>
 	<!--<script type="text/javascript" src="js/jquery.min.js"></script>-->
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="jquery.min.js"></script>
 	
 	<script type="text/javascript">
 	var list1=[0,0,0];//0=白，1=黑
